--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>CSS Grid Layout</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
 </body>
 </html>
