--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
   </div>
 </body>
 </html>
